# manjaro-starter

./: .all-contributorsrc  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  index.html  package-lock.json  package.json  pull_request_template.md  renovate.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: auto-merge.yml  deploymentCheck.yml  release.yml
old-pr/: package.json
old-pr/src/components/: NavbarComponent.tsx
old-pr/src/hooks/: usePackageStatus.ts  useToastCustom.ts
old-pr/src/initial/: App.tsx
old-pr/src/stores/: CommandStore.ts  ConfTabStore.ts  CountryStore.ts  StepStore.ts
old-pr/src/theme/: button.ts  card.ts  tab.ts
old-pr/src/translations/: da.json  en.json  pl.json  ru.json
old-pr/src/utils/: Format.ts  StringHelper.ts
public/: index.html
public/splash/: splash.html
src/: App.js  CHANGELOG.md  globals.d.ts  i18n.ts  index.js  index.tsx  react-i18next.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/resources/: manjaro-starter.desktop
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
src/app/main/: page.tsx
src/assets/: Braches.ts  Commands.ts  LocalData.json  Paths.json  Preferences.json  ReleaseNotes.md  SocialUrls.json
src/assets/data/: apps.json
src/components/: AboutComponent.tsx  App.js  AppSettings.tsx  FeatureComponent.tsx  Footer.tsx  HomeContent.tsx  KernelComponent.tsx  KernelListComponent.tsx  LanguageComponent.tsx  MoreComponent.tsx  NavbarComponent.tsx  Packages.tsx  ReleaseNotes.tsx  ResetPrompt.tsx  ResultComponent.tsx  SideBar.tsx  SideMenu.js  StartLaunch.tsx  StepButtons.tsx  StepButtonsComponent.tsx  SystemConfig.tsx  SystemInfo.tsx  SystemInfoComponent.tsx  SystemSettings.tsx  ThemeComponent.tsx  app-sidebar.tsx  nav-user.tsx  theme-switcher.tsx
src/components/AppSetting/: AboutComponent.tsx  Changelog.tsx  LanguageComponent.tsx
src/components/Home/: HomeContent.tsx  Info.tsx  LiveInstaller.tsx  ManjaroVersion.tsx  ReleaseNotes.tsx
src/components/PackageRelated/: ArrowComponent.tsx  PackageDetail.tsx  PackageStatus.tsx  PackageUnit.tsx  Packages.tsx  styles.css
src/components/SystemConfig/: GnomeLayoutMaganer.tsx  GpuInfoComponent.tsx  InstallDrivers.tsx  KernelComponent.tsx  ManjaroSettingsModule.tsx  MirrorList.tsx  Mirrors.tsx  SystemConfig.tsx  SystemFastestMirror.tsx  SystemInfo.tsx  SystemUpdate.tsx
src/components/appSetting/: AboutComponent.tsx  AppSettings.tsx  BugReport.tsx  Changelog.tsx  CommandHistory.tsx  ExpertComponent.tsx  LanguageComponent.tsx  SendFeedback.tsx  StartLaunch.tsx  ThemeSelectComponent.tsx
src/components/appsetting/: AppSettings.tsx  LanguageComponent.tsx
src/components/common/: Changelog.tsx  ChangelogToast.tsx  CloseAppComponent.tsx  CommandHelper.ts  CommandHistory.tsx  ConfirmPopComponent.tsx  DotComponent.tsx  ProcessList.tsx  ProcessSingle.tsx  ProgressList.tsx  RootDetector.tsx  ScrollToTop.tsx  StepperComponent.tsx
src/data/: apps.json
src/hooks/: usePackageStatus.ts  useToastCustom.ts  useToastCustom.tsx
src/initial/: App.tsx
src/pages/: App.tsx  ExplorerPage.tsx  FinalPage.tsx  HomePage.tsx  SettingPage.tsx
src/screens/: App.tsx  ConfigurationScreen.tsx  FinalScreen.tsx  Home.tsx  HomeScreen.tsx  PackageScreen.tsx
src/stores/: CategoryStore.ts  CommandStore.ts  ConfTabStore.ts  ConnectionStore.ts  ExpertStore.ts  ExplorerTabStore.ts  FastestMirrorStore.ts  KernelStore.ts  LiveStore.ts  PackageStore.ts  ProcessStore.ts  StepStore.ts  SystemStore.ts
src/theme/: tab.ts  theme.ts
src/translations/: da.json  de.json  en.json  fr.json  pl.json  ru.json  tr.json  uk.json
src/utils/: DevHelper.ts  Format.ts
(+115 files in other folders)
